# poc-stac-tokyo-taito

./: .gitignore  Dockerfile  LIST.md  README.md  pyproject.toml
.github/workflows/: pages.yml
docs/: index.html
k8s/: knative-service.yaml
scripts/: fetch_and_build.py
src/poc_stac_tokyo_taito/: __init__.py  app.py  ckan_client.py  config.py  csv_parser.py  geocoder.py  geojson_converter.py  megurin_simulator.py  models.py  stac_builder.py
tests/: test_app.py  test_ckan_client.py  test_csv_parser.py  test_geocoder.py  test_geojson_converter.py  test_megurin_simulator.py  test_mvt.py  test_stac_builder.py
