[project]
name = "poc-stac-tokyo-taito"
version = "0.1.0"
description = "台東区オープンデータ STAC API POC"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "python-dateutil>=2.9.0",
    "geojson2vt>=1.0.1",
    "vt2pbf>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/poc_stac_tokyo_taito"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
asyncio_mode = "auto"
